Fix double scroll issue in index.css

--- a/src/index.css
+++ b/src/index.css
@@ -11,13 +11,11 @@ body {
   background: #1f0047;
   transition: all 0.5s ease-in-out;
   color: white;
-}
-body {
-  width: 100vw;
-  overflow-x: hidden;
   scroll-behavior: smooth;
 }
-html {
+
+body > div {
+  width: 100vw;
   overflow-x: hidden;
 }
 li {
